--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.wso2</groupId>
         <artifactId>wso2</artifactId>
@@ -56,22 +57,22 @@
         <dependencies>
             <!--Siddhi Dependencies-->
             <dependency>
-                <groupId>org.wso2.siddhi</groupId>
+                <groupId>io.siddhi</groupId>
                 <artifactId>siddhi-query-api</artifactId>
                 <version>${siddhi.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.siddhi</groupId>
+                <groupId>io.siddhi</groupId>
                 <artifactId>siddhi-annotations</artifactId>
                 <version>${siddhi.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.siddhi</groupId>
+                <groupId>io.siddhi</groupId>
                 <artifactId>siddhi-core</artifactId>
                 <version>${siddhi.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.siddhi</groupId>
+                <groupId>io.siddhi</groupId>
                 <artifactId>siddhi-query-compiler</artifactId>
                 <version>${siddhi.version}</version>
             </dependency>
@@ -101,7 +102,7 @@
             <!--Carbon Analytic Dependencies-->
             <dependency>
                 <groupId>org.wso2.carbon.analytics</groupId>
-                <artifactId>org.wso2.siddhi.feature</artifactId>
+                <artifactId>io.siddhi.feature</artifactId>
                 <version>${carbon.analytc.version}</version>
                 <type>zip</type>
             </dependency>
@@ -170,9 +171,9 @@
                 <type>zip</type>
             </dependency>
             <!--<dependency>-->
-                <!--<groupId>org.wso2.carbon</groupId>-->
-                <!--<artifactId>org.wso2.carbon.logging</artifactId>-->
-                <!--<version>${carbon.logging.version}</version>-->
+            <!--<groupId>org.wso2.carbon</groupId>-->
+            <!--<artifactId>org.wso2.carbon.logging</artifactId>-->
+            <!--<version>${carbon.logging.version}</version>-->
             <!--</dependency>-->
             <dependency>
                 <groupId>org.wso2.carbon</groupId>
@@ -395,11 +396,11 @@
         <msf4j.version>2.7.0</msf4j.version>
         <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
-        <siddhi.mapper.json.version>4.0.31</siddhi.mapper.json.version>
-        <siddhi.mapper.text.version>1.0.22</siddhi.mapper.text.version>
-        <siddhi.mapper.xml.version>4.0.18</siddhi.mapper.xml.version>
-        <siddhi.version>4.4.8</siddhi.version>
-        <siddhi.version.range>[4.0.0,5.0.0)</siddhi.version.range>
+        <siddhi.mapper.json.version>5.0.1</siddhi.mapper.json.version>
+        <siddhi.mapper.text.version>2.0.0</siddhi.mapper.text.version>
+        <siddhi.mapper.xml.version>5.0.0</siddhi.mapper.xml.version>
+        <siddhi.version>5.0.0-SNAPSHOT</siddhi.version>
+        <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <carbon.analytics.common.version>6.0.66</carbon.analytics.common.version>
         <commons.collections.version>3.1</commons.collections.version>
@@ -424,7 +425,7 @@
         <pax.url.aether.version>1.6.0</pax.url.aether.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
         <carbon.kernel.version>5.2.6</carbon.kernel.version>
-        <org.wso2.transport.http.version>6.0.272</org.wso2.transport.http.version>
+        <org.wso2.transport.http.version>6.0.288</org.wso2.transport.http.version>
         <org.wso2.transport.http.version.range>[6.0,7)</org.wso2.transport.http.version.range>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <json.smart.version>2.1.0.wso2v1</json.smart.version>
@@ -436,7 +437,7 @@
         <carbon.kernel.version.range>[5.0.0,6.0.0)</carbon.kernel.version.range>
         <carbon.config.version>2.1.5</carbon.config.version>
         <carbon.config.package.import.version.range>[2.0.0, 3.0.0)</carbon.config.package.import.version.range>
- 	    <carbon.metrics.version>2.3.2</carbon.metrics.version>
+        <carbon.metrics.version>2.3.2</carbon.metrics.version>
         <carbon.metrics.version.range>[2.0,3)</carbon.metrics.version.range>
         <carbon.deployment.version>5.1.9</carbon.deployment.version>
         <carbon.deployment.version.range>[5.0.0,6.0.0)</carbon.deployment.version.range>
