--- a/pom.xml
+++ b/pom.xml
@@ -101,9 +101,9 @@
             </dependency>
             <!--Carbon Analytic Dependencies-->
             <dependency>
-                <groupId>org.wso2.carbon.analytics</groupId>
-                <artifactId>io.siddhi.feature</artifactId>
-                <version>${carbon.analytc.version}</version>
+                <groupId>io.siddhi.distribution</groupId>
+                <artifactId>io.siddhi.distribution.siddhi.feature</artifactId>
+                <version>${siddhi.distribution.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
@@ -399,14 +399,14 @@
         <siddhi.mapper.json.version>5.0.1</siddhi.mapper.json.version>
         <siddhi.mapper.text.version>2.0.0</siddhi.mapper.text.version>
         <siddhi.mapper.xml.version>5.0.0</siddhi.mapper.xml.version>
-        <siddhi.version>5.0.0-SNAPSHOT</siddhi.version>
+        <siddhi.version>5.0.0-m10</siddhi.version>
         <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
+        <siddhi.distribution.version>1.0.0-m2</siddhi.distribution.version>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <carbon.analytics.common.version>6.0.66</carbon.analytics.common.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
-        <carbon.analytc.version>2.0.404</carbon.analytc.version>
         <osgi.test.util.version>5.1.1</osgi.test.util.version>
         <commons.io.version>2.5</commons.io.version>
         <org.apache.commons.version>1.3.2</org.apache.commons.version>
