--- a/coverage-report/pom.xml
+++ b/coverage-report/pom.xml
@@ -26,7 +26,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>io.siddhi.extension.io.http.coverge.test</artifactId>
-    <name>WSO2 Siddhi IO HTTP - Test Coverage</name>
+    <name>Siddhi IO HTTP - Test Coverage</name>
     <description>Coverage reports Siddhi IO HTTP module</description>
     <url>http://wso2.com</url>
     <profiles>
