--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <scm>
-        <connection>scm:git:https://github.com/wso2-extensions/siddhi-io-http.git</connection>
-        <url>https://github.com/wso2-extensions/siddhi-io-http.git</url>
-        <developerConnection>scm:git:https://github.com/wso2-extensions/siddhi-io-http.git
+        <connection>scm:git:https://github.com/siddhi-io/siddhi-io-http.git</connection>
+        <url>https://github.com/siddhi-io/siddhi-io-http.git</url>
+        <developerConnection>scm:git:https://github.com/siddhi-io/siddhi-io-http.git
         </developerConnection>
         <tag>HEAD</tag>
     </scm>
@@ -37,7 +37,7 @@
     <groupId>io.siddhi.extension.io.http</groupId>
     <artifactId>siddhi-io-http-parent</artifactId>
     <version>2.0.9-SNAPSHOT</version>
-    <name>WSO2 Siddhi IO Extension - HTTP IO Aggregator Pom</name>
+    <name>Siddhi IO Extension - HTTP IO Aggregator</name>
     <url>http://wso2.org</url>
     <profiles>
         <profile>
