--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,9 @@ pages:
   - 2.0.2: api/2.0.2.md
   - 2.0.1: api/2.0.1.md
   - 2.0.0: api/2.0.0.md
+  - 1.2.2: api/1.2.2.md
+  - 1.2.1: api/1.2.1.md
+  - 1.2.0: api/1.2.0.md
   - 1.1.5: api/1.1.5.md
   - 1.1.4: api/1.1.4.md
   - 1.1.3: api/1.1.3.md
