--- a/tests/distribution/pom.xml
+++ b/tests/distribution/pom.xml
@@ -368,6 +368,8 @@
                         <phase>package</phase>
                         <configuration>
                             <tasks>
+                                <delete file="target/wso2siddhi-io-http-${project.version}/wso2/lib/plugins/slf4j.api_1.7.26.jar"/>
+                                <delete file="target/wso2siddhi-io-http-${project.version}/wso2/lib/plugins/slf4j.log4j12_1.7.26.jar"/>
                                 <replace dir="target/wso2siddhi-io-http-${project.version}/wso2" token="false" value="true">
                                     <include name="**/bundles.info" />
                                 </replace>
