--- a/pom.xml
+++ b/pom.xml
@@ -354,6 +354,24 @@
                 <type>zip</type>
             </dependency>
             <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.databridge.commons.feature</artifactId>
+                <version>${carbon.analytics.common.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.databridge.commons.thrift.feature</artifactId>
+                <version>${carbon.analytics.common.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.databridge.agent.feature</artifactId>
+                <version>${carbon.analytics.common.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
                 <groupId>org.ops4j.pax.tipi</groupId>
                 <artifactId>org.ops4j.pax.tipi.hamcrest.core</artifactId>
                 <version>${org.ops4j.pax.tipi.version}</version>
@@ -374,11 +392,10 @@
                 <artifactId>msf4j-core</artifactId>
                 <version>${msf4j.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/io.netty/netty-handler-proxy -->
             <dependency>
                 <groupId>org.wso2.carbon.transport</groupId>
                 <artifactId>org.wso2.carbon.connector.framework.feature</artifactId>
-                <version>${org.wso2.carbon.transport.http.netty.version}</version>
+                <version>${org.wso2.carbon.connector.framework.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
@@ -389,10 +406,10 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <carbon.jndi.version>1.0.4</carbon.jndi.version>
-        <carbon.datasources.version>1.1.3</carbon.datasources.version>
-        <org.wso2.carbon.transport.http.netty.version>5.0.1</org.wso2.carbon.transport.http.netty.version>
-        <msf4j.version>2.7.0</msf4j.version>
+        <carbon.jndi.version>1.0.6</carbon.jndi.version>
+        <carbon.datasources.version>1.1.8</carbon.datasources.version>
+        <org.wso2.carbon.connector.framework.version>5.0.1</org.wso2.carbon.connector.framework.version>
+        <msf4j.version>2.7.6</msf4j.version>
         <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <siddhi.mapper.json.version>5.0.2</siddhi.mapper.json.version>
@@ -402,14 +419,14 @@
         <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
         <siddhi.distribution.version>1.0.0-m3</siddhi.distribution.version>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
-        <carbon.analytics.common.version>6.0.66</carbon.analytics.common.version>
+        <carbon.analytics.common.version>6.1.30</carbon.analytics.common.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
         <osgi.test.util.version>5.1.1</osgi.test.util.version>
         <commons.io.version>2.5</commons.io.version>
         <org.apache.commons.version>1.3.2</org.apache.commons.version>
-        <io.netty.version>4.1.16.Final</io.netty.version>
+        <io.netty.version>4.1.34.Final</io.netty.version>
         <osgi.api.version>6.0.0</osgi.api.version>
         <testng.version>6.11</testng.version>
         <maven.shadeplugin.version>2.4.1</maven.shadeplugin.version>
@@ -424,22 +441,22 @@
         <pax.url.aether.version>1.6.0</pax.url.aether.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
         <carbon.kernel.version>5.2.6</carbon.kernel.version>
-        <org.wso2.transport.http.version>6.0.289</org.wso2.transport.http.version>
+        <org.wso2.transport.http.version>6.1.9</org.wso2.transport.http.version>
         <org.wso2.transport.http.version.range>[6.0.0,7.0.0)</org.wso2.transport.http.version.range>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <commons.lang3.version>3.7</commons.lang3.version>
         <json.smart.version>2.1.0.wso2v1</json.smart.version>
         <carbon.touchpoint.version>1.1.0</carbon.touchpoint.version>
-        <carbon.securevault.version>5.0.12</carbon.securevault.version>
+        <carbon.securevault.version>5.0.15</carbon.securevault.version>
         <carbon.securevault.version.range>[5.0.0, 6.0.0)</carbon.securevault.version.range>
         <carbon.utils.version>2.0.2</carbon.utils.version>
         <carbon.utils.package.import.version.range>[2.0.0, 3.0.0)</carbon.utils.package.import.version.range>
         <carbon.kernel.version.range>[5.0.0,6.0.0)</carbon.kernel.version.range>
-        <carbon.config.version>2.1.5</carbon.config.version>
+        <carbon.config.version>2.1.14</carbon.config.version>
         <carbon.config.package.import.version.range>[2.0.0, 3.0.0)</carbon.config.package.import.version.range>
-        <carbon.metrics.version>2.3.2</carbon.metrics.version>
+        <carbon.metrics.version>2.3.11</carbon.metrics.version>
         <carbon.metrics.version.range>[2.0,3)</carbon.metrics.version.range>
-        <carbon.deployment.version>5.1.9</carbon.deployment.version>
+        <carbon.deployment.version>5.2.2</carbon.deployment.version>
         <carbon.deployment.version.range>[5.0.0,6.0.0)</carbon.deployment.version.range>
         <org.wso2.carbon.messaging.version>3.0.2</org.wso2.carbon.messaging.version>
         <org.wso2.carbon.messaging.version.range>[3,4)</org.wso2.carbon.messaging.version.range>
