--- a/pom.xml
+++ b/pom.xml
@@ -441,7 +441,7 @@
         <pax.url.aether.version>1.6.0</pax.url.aether.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
         <carbon.kernel.version>5.2.6</carbon.kernel.version>
-        <org.wso2.transport.http.version>6.1.9</org.wso2.transport.http.version>
+        <org.wso2.transport.http.version>6.3.9-SNAPSHOT</org.wso2.transport.http.version>
         <org.wso2.transport.http.version.range>[6.0.0,7.0.0)</org.wso2.transport.http.version.range>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <commons.lang3.version>3.7</commons.lang3.version>
