Private package transport-http and io-netty

--- a/component/pom.xml
+++ b/component/pom.xml
@@ -128,10 +128,16 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
+                        <Private-Package>
+                            org.wso2.transport.http.netty.*;version="${org.wso2.transport.http.version}",
+                            io.netty.*;version="${io.netty.version}"
+                        </Private-Package>
                         <Export-Package>
                             io.siddhi.extension.io.http.*
                         </Export-Package>
                         <Import-Package>
+                            !org.wso2.transport.http.netty.*,
+                            !io.netty.*,
                             io.siddhi.core.*;version="${siddhi.version.range}",
                             io.siddhi.annotation.*;version="${siddhi.version.range}",
                             io.siddhi.query.api.*;version="${siddhi.version.range}",
