--- a/component/pom.xml
+++ b/component/pom.xml
@@ -95,6 +95,10 @@
             <groupId>org.json.wso2</groupId>
             <artifactId>json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
