--- a/pom.xml
+++ b/pom.xml
@@ -406,6 +406,11 @@
                 <artifactId>org.wso2.carbon.si.metrics.core</artifactId>
                 <version>${carbon.analytics.version}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <properties>
@@ -484,6 +489,7 @@
         <org.jacoco.version>0.7.9</org.jacoco.version>
         <surefire.plugin.version>2.22.1</surefire.plugin.version>
         <carbon.analytics.version>3.0.49</carbon.analytics.version>
+        <commons.codec.version>1.15</commons.codec.version>
     </properties>
     <build>
         <extensions>
