--- a/component/pom.xml
+++ b/component/pom.xml
@@ -98,6 +98,10 @@
             <groupId>org.wso2.carbon.analytics</groupId>
             <artifactId>org.wso2.carbon.si.metrics.core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
