--- a/pom.xml
+++ b/pom.xml
@@ -273,17 +273,18 @@
         <siddhi.mapper.json.version>5.2.2-SNAPSHOT</siddhi.mapper.json.version>
         <siddhi.mapper.text.version>2.1.1-SNAPSHOT</siddhi.mapper.text.version>
         <siddhi.mapper.xml.version>5.2.2-SNAPSHOT</siddhi.mapper.xml.version>
-        <siddhi.version>5.1.21-SNAPSHOT</siddhi.version>
+        <siddhi.version>5.1.21</siddhi.version>
         <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
+        <netty.version.range>[4.1.70.Final,5.0.0)</netty.version.range>
         <carbon.analytics.common.version>6.1.56-SNAPSHOT</carbon.analytics.common.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
-        <io.netty.version>4.1.42.Final</io.netty.version>
+        <io.netty.version>4.1.73.Final</io.netty.version>
         <testng.version>6.11</testng.version>
         <maven.shadeplugin.version>2.4.1</maven.shadeplugin.version>
         <org.jacoco.ant.version>0.7.5.201505241946</org.jacoco.ant.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
-        <org.wso2.transport.http.version>6.3.22</org.wso2.transport.http.version>
+        <org.wso2.transport.http.version>6.3.30</org.wso2.transport.http.version>
         <org.wso2.transport.http.version.range>[6.0.0,7.0.0)</org.wso2.transport.http.version.range>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <commons.lang3.version>3.7</commons.lang3.version>
