--- a/pom.xml
+++ b/pom.xml
@@ -270,9 +270,9 @@
         <msf4j.version>2.7.6</msf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
-        <siddhi.mapper.json.version>5.2.2-SNAPSHOT</siddhi.mapper.json.version>
-        <siddhi.mapper.text.version>2.1.1-SNAPSHOT</siddhi.mapper.text.version>
-        <siddhi.mapper.xml.version>5.2.2-SNAPSHOT</siddhi.mapper.xml.version>
+        <siddhi.mapper.json.version>5.2.2</siddhi.mapper.json.version>
+        <siddhi.mapper.text.version>2.1.1</siddhi.mapper.text.version>
+        <siddhi.mapper.xml.version>5.2.2</siddhi.mapper.xml.version>
         <siddhi.version>5.1.21</siddhi.version>
         <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
         <netty.version.range>[4.1.70.Final,5.0.0)</netty.version.range>
