--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,7 @@
         <siddhi.version>5.1.21</siddhi.version>
         <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
         <netty.version.range>[4.1.70.Final,5.0.0)</netty.version.range>
-        <carbon.analytics.common.version>6.1.56-SNAPSHOT</carbon.analytics.common.version>
+        <carbon.analytics.common.version>6.1.57</carbon.analytics.common.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
         <io.netty.version>4.1.73.Final</io.netty.version>
