--- a/pom.xml
+++ b/pom.xml
@@ -153,17 +153,6 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>apache-collections</groupId>
-                <artifactId>commons-collections</artifactId>
-                <version>${commons.collections.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>log4j</groupId>
-                        <artifactId>log4j</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
                 <groupId>org.ops4j.pax.tipi</groupId>
                 <artifactId>org.ops4j.pax.tipi.hamcrest.core</artifactId>
                 <version>${org.ops4j.pax.tipi.version}</version>
@@ -267,17 +256,16 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <msf4j.version>2.7.6</msf4j.version>
+        <msf4j.version>2.8.5-SNAPSHOT</msf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
-        <siddhi.mapper.json.version>5.2.2</siddhi.mapper.json.version>
+        <siddhi.mapper.json.version>5.2.3-SNAPSHOT</siddhi.mapper.json.version>
         <siddhi.mapper.text.version>2.1.1</siddhi.mapper.text.version>
         <siddhi.mapper.xml.version>5.2.2</siddhi.mapper.xml.version>
         <siddhi.version>5.1.21</siddhi.version>
         <siddhi.version.range>[5.0.0,6.0.0)</siddhi.version.range>
         <netty.version.range>[4.1.70.Final,5.0.0)</netty.version.range>
-        <carbon.analytics.common.version>6.1.57</carbon.analytics.common.version>
-        <commons.collections.version>3.1</commons.collections.version>
+        <carbon.analytics.common.version>6.1.59-SNAPSHOT</carbon.analytics.common.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
         <io.netty.version>4.1.73.Final</io.netty.version>
         <testng.version>6.11</testng.version>
@@ -300,7 +288,7 @@
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
         <org.jacoco.version>0.7.9</org.jacoco.version>
         <surefire.plugin.version>2.22.1</surefire.plugin.version>
-        <carbon.analytics.version>3.0.49</carbon.analytics.version>
+        <carbon.analytics.version>3.0.59-SNAPSHOT</carbon.analytics.version>
         <commons.codec.version>1.15</commons.codec.version>
         <okhttp.client.version>4.8.1</okhttp.client.version>
         <mavan.findbugsplugin.exclude.file>findbugs-exclude.xml</mavan.findbugsplugin.exclude.file>
