--- a/pom.xml
+++ b/pom.xml
@@ -286,8 +286,8 @@
         <maven.project.info.reports.plugin.version>2.4</maven.project.info.reports.plugin.version>
         <antlr4.maven.plugin.version>4.2.2</antlr4.maven.plugin.version>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
-        <org.jacoco.version>0.7.9</org.jacoco.version>
-        <surefire.plugin.version>2.22.1</surefire.plugin.version>
+        <org.jacoco.version>0.8.5</org.jacoco.version>
+        <surefire.plugin.version>2.22.2</surefire.plugin.version>
         <carbon.analytics.version>3.0.59</carbon.analytics.version>
         <commons.codec.version>1.15</commons.codec.version>
         <okhttp.client.version>4.8.1</okhttp.client.version>
@@ -323,8 +323,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${maven.compiler.plugin.source.version}</source>
-                    <target>${maven.compiler.plugin.target.version}</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
