--- a/pom.xml
+++ b/pom.xml
@@ -323,7 +323,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>11</release>
+                    <source>${maven.compiler.plugin.source.version}</source>
+                    <target>${maven.compiler.plugin.target.version}</target>
                 </configuration>
             </plugin>
             <plugin>
