--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,21 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-core</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <properties>
@@ -292,6 +307,7 @@
         <commons.codec.version>1.15</commons.codec.version>
         <okhttp.client.version>4.8.1</okhttp.client.version>
         <mavan.findbugsplugin.exclude.file>findbugs-exclude.xml</mavan.findbugsplugin.exclude.file>
+        <jaxb.version>2.3.0</jaxb.version>
     </properties>
     <build>
         <extensions>
